--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" name="addNewToDo" id="addNewToDo" placeholder="Add a new to-do">
         <ul>
             <li><span><i class="fas fa-trash-alt"></i></span> Read a book </li>
-            <li><span><i class="fas fa-trash-alt"></i></span> Cook the food </li>
+            <li><span><i class="fas fa-trash-alt"></i></span> Cook food </li>
             <li><span><i class="fas fa-trash-alt"></i></span> Finish the assignment </li>
         </ul>
     </div>
